sound: Add NXP TFA98xx driver

--- a/arch/arm64/configs/n7x-caf_z2_row_defconfig
+++ b/arch/arm64/configs/n7x-caf_z2_row_defconfig
@@ -4498,6 +4498,7 @@ CONFIG_QMI_ENCDEC=y
 # Row config
 #
 
+CONFIG_NXP_TFA98xx=y
 CONFIG_DRV2605L_HAPTICS=y
 CONFIG_SENSORS_SYSFS=y
 CONFIG_SENSORS_MAX86X00=y
