--- a/arch/arm64/configs/n7x-caf_z2_row_defconfig
+++ b/arch/arm64/configs/n7x-caf_z2_row_defconfig
@@ -1732,17 +1732,17 @@ CONFIG_INPUT_TABLET=y
 # CONFIG_TABLET_USB_KBTAB is not set
 # CONFIG_TABLET_SERIAL_WACOM4 is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v21 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21 is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26 is not set
 # CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26 is not set
-CONFIG_OF_TOUCHSCREEN=y
+# CONFIG_OF_TOUCHSCREEN is not set
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
@@ -1792,7 +1792,6 @@ CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_FTS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
-# CONFIG_TOUCHSCREEN_GT1151 is not set
 # CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 # CONFIG_GT9XX_TOUCHPANEL_DRIVER is not set
 # CONFIG_GT9XX_TOUCHPANEL_UPDATE is not set
