--- a/arch/arm64/configs/n7x-caf_z2_row_defconfig
+++ b/arch/arm64/configs/n7x-caf_z2_row_defconfig
@@ -1172,7 +1172,7 @@ CONFIG_UID_CPUTIME=y
 CONFIG_TI_DRV2667=y
 # CONFIG_QPNP_MISC is not set
 CONFIG_FPC1020_REE=y
-# CONFIG_SENSORS_SYSFS is not set
+CONFIG_SENSORS_SYSFS=y
 # CONFIG_SENSORS_MAX86X00_LED_POWER is not set
 # CONFIG_C2PORT is not set
 
@@ -1799,7 +1799,7 @@ CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
-# CONFIG_INPUT_HBTP_INPUT is not set
+CONFIG_INPUT_HBTP_INPUT=y
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_MPU3050 is not set
 # CONFIG_INPUT_GP2A is not set
@@ -1920,7 +1920,7 @@ CONFIG_MSM_SMD_PKT=y
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
 # CONFIG_MSM_MDSP_TS is not set
-# CONFIG_MSM_RDBG is not set
+CONFIG_MSM_RDBG=m
 
 #
 # I2C support
@@ -3774,7 +3774,7 @@ CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_MSM_BAM_DMUX is not set
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
-# CONFIG_MSM_POWER is not set
+CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 CONFIG_MSM_QBT1000=y
 # CONFIG_MSM_PACMAN is not set
@@ -4499,7 +4499,6 @@ CONFIG_QMI_ENCDEC=y
 
 CONFIG_NXP_TFA98xx=y
 CONFIG_DRV2605L_HAPTICS=y
-CONFIG_SENSORS_SYSFS=y
 CONFIG_SENSORS_MAX86X00=y
 
 CONFIG_TOUCHSCREEN_GT1151=y
