--- a/arch/arm64/configs/n7x-caf_z2_row_defconfig
+++ b/arch/arm64/configs/n7x-caf_z2_row_defconfig
@@ -45,7 +45,7 @@ CONFIG_LOCALVERSION="-n7x-caf"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-CONFIG_SYSVIPC=y
+# CONFIG_SYSVIPC is not set
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -566,7 +566,7 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
-# CONFIG_IP_MULTICAST is not set
+CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
 CONFIG_IP_MULTIPLE_TABLES=y
@@ -1172,7 +1172,8 @@ CONFIG_UID_CPUTIME=y
 CONFIG_TI_DRV2667=y
 # CONFIG_QPNP_MISC is not set
 CONFIG_FPC1020_REE=y
-# CONFIG_SENSORS_SYSFS is not set
+CONFIG_SENSORS_SYSFS=y
+CONFIG_SENSORS_MAX86X00=y
 # CONFIG_SENSORS_MAX86X00_LED_POWER is not set
 # CONFIG_C2PORT is not set
 
@@ -1326,7 +1327,7 @@ CONFIG_DM_REQ_CRYPT=y
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 CONFIG_DM_VERITY=y
-# CONFIG_DM_VERITY_FEC is not set
+CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
 # CONFIG_TARGET_CORE is not set
@@ -1394,7 +1395,7 @@ CONFIG_NET_VENDOR_ATHEROS=y
 # CONFIG_ATL2 is not set
 # CONFIG_ATL1 is not set
 # CONFIG_ATL1E is not set
-# CONFIG_ATL1C is not set
+CONFIG_ATL1C=1
 # CONFIG_ALX is not set
 CONFIG_NET_VENDOR_BROADCOM=y
 # CONFIG_B44 is not set
@@ -1639,7 +1640,8 @@ CONFIG_CLD_LL_CORE=y
 # CONFIG_CNSS_SECURE_FW is not set
 # CONFIG_BUS_AUTO_SUSPEND is not set
 # CONFIG_CNSS_LOGGER is not set
-CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
+# CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
+# CONFIG_MSM_PRESERVE_MEM is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1791,12 +1793,12 @@ CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_FTS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
-# CONFIG_TOUCHSCREEN_GT9XX is not set
-# CONFIG_TOUCHSCREEN_GT1151 is not set
-# CONFIG_TOUCHSCREEN_MAXIM_STI is not set
-# CONFIG_GT9XX_TOUCHPANEL_DRIVER is not set
-# CONFIG_GT9XX_TOUCHPANEL_UPDATE is not set
-# CONFIG_GT9XX_TOUCHPANEL_DEBUG is not set
+CONFIG_TOUCHSCREEN_GT1151=y
+CONFIG_GT1151_TOUCHPANEL_DRIVER=y
+CONFIG_GT1151_TOUCHPANEL_GENERIC=y
+CONFIG_GT1151_TOUCHPANEL_UPDATE=y
+CONFIG_GT1151_TOUCHPANEL_TOOL=y
+CONFIG_GT1151_TOUCHPANEL_EXTENTS=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -1824,6 +1826,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_SOC_BUTTON_ARRAY is not set
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
+CONFIG_DRV2605L_HAPTICS=y
 CONFIG_SENSORS_HALL=y
 
 #
@@ -3775,7 +3778,7 @@ CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_MSM_BAM_DMUX is not set
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
-# CONFIG_MSM_POWER is not set
+CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 CONFIG_MSM_QBT1000=y
 # CONFIG_MSM_PACMAN is not set
@@ -3959,7 +3962,7 @@ CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
-# CONFIG_QUOTA is not set
+CONFIG_QUOTA=y
 # CONFIG_QUOTACTL is not set
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
@@ -4267,7 +4270,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
-# CONFIG_DEBUG_SET_MODULE_RONX is not set
+CONFIG_DEBUG_SET_MODULE_RONX=y
 # CONFIG_FREE_PAGES_RDONLY is not set
 CONFIG_DEBUG_RODATA=y
 CONFIG_DEBUG_ALIGN_RODATA=y
@@ -4494,18 +4497,4 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 
-#
-# Row config
-#
-
 CONFIG_NXP_TFA98xx=y
-CONFIG_DRV2605L_HAPTICS=y
-CONFIG_SENSORS_SYSFS=y
-CONFIG_SENSORS_MAX86X00=y
-
-CONFIG_TOUCHSCREEN_GT1151=y
-CONFIG_GT1151_TOUCHPANEL_DRIVER=y
-CONFIG_GT1151_TOUCHPANEL_GENERIC=y
-CONFIG_GT1151_TOUCHPANEL_UPDATE=y
-CONFIG_GT1151_TOUCHPANEL_TOOL=y
-CONFIG_GT1151_TOUCHPANEL_EXTENTS=y
